--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 
     <div class="container alert alert-success text-center">
         <h1>Azamat Salamatov | A-Z Tech</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p>I am the CEO of A-Z Tech</p>
+        <h3>I know python, java, c++, js, html, css, sql, git & github</h3>
+
         <a href="about.html">More about me...</a>
     </div>
 
