--- a/index.html
+++ b/index.html
@@ -8,9 +8,68 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>My Portfolio</title>
+    <title>Azamat Salamatov</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
+    <section class="home">
+
+
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">My <span style="color:red">Portfolio</span></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="about.html">About Me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="projects.html">My Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact Me</a>
+              </li>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+
+      <div class="intro">
+        <h1 class="name">Azamat Salamatov</h1>
+        <h3 class="profession">Software Engineer Python/Java/C++/Full-Stack</h3>
+        <br>
+
+        <p>
+          Hi. Welcome to me personal web page. Thank you for landing here. If you explore this website
+          you will get to know about me, What I have done in the past, What I'm currently on and my future.
+          If you are interested to know more about me
+          Go to the about me page.
+          In case you want to contact me for any reason. I've added contact details in the contact page.
+          <br>
+          <b>Thank You.</b>
+        </p>
+        <br>
+
+        <button type="button" class="btn btn-info btn-lg">Explore</button>
+
+      </div>
+
+
+
+
+    </section>
+
+
+
+
+
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
