about page improve

--- a/about.html
+++ b/about.html
@@ -33,6 +33,20 @@
         </div>
       </nav>
 
+
+      <div class="card" style="width: 40rem; margin: 5% auto;">
+        <img src="images/azamat1.jpg" class="card-img-top" style="width:50%; margin: 10px auto">
+        <div class="card-body">
+          <h1 class="card-title">Azamat Salamatov</h1>
+          <p class="card-text">Hi. Welcome to me personal web page. Thank you for landing here. If you explore this website
+            you will get to know about me, What I have done in the past, What I'm currently on and my future.
+            If you are interested to know more about me
+            Go to the about me page.
+            In case you want to contact me for any reason. I've added contact details in the contact page.</p>
+          <a href="files/resume.pdf" class="btn btn-primary" target="_blank">Download Resume</a>
+        </div>
+      </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
