--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,82 @@
         </div>
       </nav>
 
+
+      <div class="container p-5">   
+
+        <h1 class="alert alert-info text-center">
+            My Projects
+        </h1>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+                <img src="images/bsoup.png" style="width:100%">
+              <h5 class="card-title">Beautiful Soup | Python</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                  <img src="images/bsoup.png" style="width:100%">
+                <h5 class="card-title">Beautiful Soup | Python</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+                <img src="images/bsoup.png" style="width:100%">
+              <h5 class="card-title">Beautiful Soup | Python</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                  <img src="images/bsoup.png" style="width:100%">
+                <h5 class="card-title">Beautiful Soup | Python</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+                <img src="images/bsoup.png" style="width:100%">
+              <h5 class="card-title">Beautiful Soup | Python</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+              <div class="card-body">
+                  <img src="images/bsoup.png" style="width:100%">
+                <h5 class="card-title">Beautiful Soup | Python</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+      
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
